Fixed the navabr spacing

--- a/src/Styles/CommonStyle/_navbar.scss
+++ b/src/Styles/CommonStyle/_navbar.scss
@@ -7,6 +7,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  &.sticky-top {
+    top: 10px;
+  }
   .container {
     width: 80%;
     height: 4rem;
@@ -18,6 +22,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 0;
     overflow: hidden;
+  
   }
   .navbar-brand {
     position: relative;
@@ -30,13 +35,36 @@
     padding: 0.5rem;
     margin-right: 1rem;
     color: $blue;
-    transition: transform 0.3s ease; // Add transition for the toggler
+    transition: transform 0.3s ease;
+    box-shadow: -7px -7px 20px 0px #fff9,
+              -4px -4px 5px 0px rgba(172, 172, 172, 0.6),
+              7px 7px 20px 0px #0002,
+              4px 4px 5px 0px #0001,
+              inset 0px 0px 0px 0px #fff9,
+              inset 0px 0px 0px 0px #0001,
+              inset 0px 0px 0px 0px #fff9,
+              inset 0px 0px 0px 0px #0001;
+    transition: box-shadow 0.6s cubic-bezier(.79,.21,.06,.81);
+    
+    // Remove outline in all states
+    outline: none !important;
     
     &:focus {
-      box-shadow: none;
+      outline: none !important;
+      box-shadow: -7px -7px 20px 0px #fff9,
+                -4px -4px 5px 0px rgba(112, 112, 112, 0.6),
+                7px 7px 20px 0px #0002,
+                4px 4px 5px 0px #0001;
     }
     
-  
+    &:active {
+      outline: none !important;
+      
+    }
+    
+    &:hover {
+      outline: none !important;
+    }
     
     svg {
       font-size: 1.5rem;
