--- a/src/Styles/ElementStyle/_about.scss
+++ b/src/Styles/ElementStyle/_about.scss
@@ -1,5 +1,6 @@
 #about{
-    height:calc(100vh - 4rem);
+    height:calc(100vh - 4rem - 10px);
+
     border:1px solid yellowgreen;
     h1{
         color: coral;
