--- a/src/Styles/ElementStyle/_home.scss
+++ b/src/Styles/ElementStyle/_home.scss
@@ -1,4 +1,5 @@
 #home{
     border:2px solid yellow;
-    height:calc(100vh - 4rem);
+    height:calc(calc(100vh - 4rem) - 10px);
+
 }
