--- a/src/Styles/ElementStyle/_topic.scss
+++ b/src/Styles/ElementStyle/_topic.scss
@@ -1,5 +1,6 @@
 #topic{
-   height:calc(100vh - 4rem);
+   height:calc(100vh - 4rem - 10px);
+
    border:1px solid greenyellow; 
    h1{
     color:royalblue;
